I attach my DOM Modulation

--- a/sketch.html
+++ b/sketch.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/PersonalWebsite/JSProblems/OnlineSketchbook/sketch.css">
 </head>
-<body> <div class="parent">
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
-           <div id="divid"></div>
+
+<body>
+    <div class="parent">
+        <div class="divid" id="box1">AB</div>
+        <div class="divid" id="box2">BC</div>
+        <div class="divid" id="box3">CD</div>
+        <div class="divid" id="box4">DE</div>
+        <div class="divid" id="box5">EF</div>
+        <div class="divid" id="box6">FG</div>
+        <div class="divid" id="box7">GH</div>
+        <div class="divid" id="box8">HI</div>
+        <div class="divid" id="box9">IJ</div>
+        <div class="divid" id="box10">JK</div>
+        <div class="divid" id="box11">KL</div>
+        <div class="divid" id="box12">LM</div>
+        <div class="divid" id="box13">MN</div>
+        <div class="divid" id="box14">NO</div>
+        <div class="divid" id="box15">OP</div>
+        <div class="divid" id="box16">PQ</div>
     </div>
-    
+
 </body>
+<script src="/PersonalWebsite/JSProblems/OnlineSketchbook/sketch.js"></script>
+
 </html>
