--- a/sketch.html
+++ b/sketch.html
@@ -10,22 +10,22 @@
 
 <body>
     <div class="parent">
-        <div class="divid" id="box1">AB</div>
-        <div class="divid" id="box2">BC</div>
-        <div class="divid" id="box3">CD</div>
-        <div class="divid" id="box4">DE</div>
-        <div class="divid" id="box5">EF</div>
-        <div class="divid" id="box6">FG</div>
-        <div class="divid" id="box7">GH</div>
-        <div class="divid" id="box8">HI</div>
-        <div class="divid" id="box9">IJ</div>
-        <div class="divid" id="box10">JK</div>
-        <div class="divid" id="box11">KL</div>
-        <div class="divid" id="box12">LM</div>
-        <div class="divid" id="box13">MN</div>
-        <div class="divid" id="box14">NO</div>
-        <div class="divid" id="box15">OP</div>
-        <div class="divid" id="box16">PQ</div>
+        <div class="divid" id="box1"></div>
+        <div class="divid" id="box2"></div>
+        <div class="divid" id="box3"></div>
+        <div class="divid" id="box4"></div>
+        <div class="divid" id="box5"></div>
+        <div class="divid" id="box6"></div>
+        <div class="divid" id="box7"></div>
+        <div class="divid" id="box8"></div>
+        <div class="divid" id="box9"></div>
+        <div class="divid" id="box10"></div>
+        <div class="divid" id="box11"></div>
+        <div class="divid" id="box12"></div>
+        <div class="divid" id="box13"></div>
+        <div class="divid" id="box14"></div>
+        <div class="divid" id="box15"></div>
+        <div class="divid" id="box16"></div>
     </div>
 
 </body>
