--- a/sketch.html
+++ b/sketch.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/PersonalWebsite/JSProblems/OnlineSketchbook/sketch.css">
+    <link rel="stylesheet" href="sketch.css">
 </head>
-
 <body>
-    <div class="parent">
-        <div class="divid" id="box1"></div>
-        <div class="divid" id="box2"></div>
-        <div class="divid" id="box3"></div>
-        <div class="divid" id="box4"></div>
-        <div class="divid" id="box5"></div>
-        <div class="divid" id="box6"></div>
-        <div class="divid" id="box7"></div>
-        <div class="divid" id="box8"></div>
-        <div class="divid" id="box9"></div>
-        <div class="divid" id="box10"></div>
-        <div class="divid" id="box11"></div>
-        <div class="divid" id="box12"></div>
-        <div class="divid" id="box13"></div>
-        <div class="divid" id="box14"></div>
-        <div class="divid" id="box15"></div>
-        <div class="divid" id="box16"></div>
-    </div>
+    <input type="color">
+    <div class="parent"></div>
 
 </body>
-<script src="/PersonalWebsite/JSProblems/OnlineSketchbook/sketch.js"></script>
+<script src="sketch.js"></script>
 
 </html>
